# safeall

./: .gitignore  Cargo.toml  README.md
safeall/safeall-cli/: Cargo.toml
safeall/safeall-cli/src/: main.rs
safeall/safeall-core/: Cargo.toml
safeall/safeall-core/src/: lib.rs
safeall/safeall-core/testdir_additional/more/even-möre/: wèirder,name.txt
safeall/safeall-gui/: Cargo.toml
safeall/safeall-gui/src/: icon.rs  main.rs
src/: main.rs
