[package]
name = "safeall-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "safeall"
path = "src/main.rs"

[dependencies]
safeall-core.workspace = true

clap = { version = "4.5.53", features = ["derive"] }
tokio.workspace = true
indicatif = { version = "0.18.3", features = ["tokio"] }
console = { version = "0.16.2", features = ["windows-console-colors"] }


[lints.clippy]
pedantic = "warn"
