[package]
name = "safeall-gui"
version = "0.1.0"
edition = "2024"


[dependencies]
safeall-core.workspace = true

iced = { version = "0.14.0", features = ["tokio", "sipper"] }
tokio.workspace = true
rfd = { version = "0.16.0", features = [
  "tokio",
  "wayland",
  "xdg-portal",
], default-features = false }
tray-icon = "0.21.3"
gtk = "0.18.2"

[lints.clippy]
pedantic = "warn"
